--- a/rule.html
+++ b/rule.html
@@ -61,13 +61,9 @@
         <div>
             <h3 class="bb">一.遊戲設置</h3>
             <ol>
-                <li>
-                    <h5 class="bb">選角色</h5>
-                </li>
+                <li class="bb">選角色</li>
                 <p>每位玩家分發二張角色牌，每位玩家挑選其中一張作為自己的角色，當所有玩家都挑選好角色後，潛伏的角色牌要面朝下蓋伏，其他角色面朝上亮出。剩餘的角色牌都面朝下堆疊在一旁。</p>
-                <li>
-                    <h5 class="bb">抽陣營</h5>
-                </li>
+                <li class="bb">抽陣營</li>
                 <p>在挑選角色之後，拿取等同於玩家人數的身份牌（參照下表）隨機分給每位玩家一張身份牌，所有玩家的身份牌都是保密的（面朝下放置）。</p>
                 <table>
                     <thead>
@@ -142,9 +138,7 @@
                     </tbody>
                 </table>
                 <br>
-                <li>
-                    <h5 class="bb">起始手牌</h5>
-                </li>
+                <li class="bb">起始手牌</li>
                 <p>將遊戲牌洗勻後，分給每位玩家三張牌為起始手牌。之後將剩餘的遊戲牌放在中央，作為牌庫。</p>
             </ol>
         </div>
