--- a/rule.html
+++ b/rule.html
@@ -176,7 +176,7 @@
             <h3 class="bb">四.死亡 & 輸掉遊戲</h3>
             <ol style="list-style-type: disc;">
                 <li><p>當玩家無法在自己回合中傳出情報，就會輸掉遊戲，輸掉遊戲不會發動角色死亡時觸發的效果。</p></li>
-                <li><p>若自己回合再傳出情報前已滿足死亡或勝利條件時則視為死亡或勝利並不視為輸掉遊戲。</p></li>
+                <li><p>若自己回合再傳出情報前已滿足死亡或勝利條件時，則視為死亡或勝利並不視為輸掉遊戲。</p></li>
                 <li><p>當獲得三張或以上的假情報時，視為死亡。某些角色死亡時會觸發效果。</p></li>
                 <li><p>在同時滿足死亡及勝利的條件下，死亡優先於勝利，某些角色技能除外</p></li>
             </ol>
