圖片檔名修改

--- a/index.html
+++ b/index.html
@@ -157,11 +157,11 @@
                 <div>
                     <div class="table_game">
                         <p>三國殺</p>
-                        <a href="#"><img src="image/三國殺.jpg"></a>
+                        <a href="#"><img src="image/WTK.jpg"></a>
                     </div>
                     <div class="table_game">
                         <p>盜夢都市</p>
-                        <a href="#"><img src="image/盜夢都市.jpg"></a>
+                        <a href="#"><img src="image/Inception.jpg"></a>
                     </div>
                     <div class="table_game">
                         <p>BANG！砰</p>
