--- a/character.html
+++ b/character.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>角色介紹</title>
+    <script type="text/javascript" src="showerpics.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <style>
@@ -35,7 +36,7 @@
             padding-top: 15px;
         }
         
-        #role_bar img {
+        #role_bar input {
             width: 160px;
             margin: 0px;
         }
@@ -56,39 +57,46 @@
             <button>搜尋</button>
         </div>
         <div id="role_bar">
-            <img src="image\Character\Character_1.png" alt="">
-            <img src="image\Character\Character_2.png" alt="">
-            <img src="image\Character\Character_3.png" alt="">
-            <img src="image\Character\Character_4.png" alt="">
-            <img src="image\Character\Character_5.png" alt="">
-            <img src="image\Character\Character_6.png" alt="">
-            <img src="image\Character\Character_7.png" alt="">
-            <img src="image\Character\Character_8.png" alt="">
-            <img src="image\Character\Character_9.png" alt="">
-            <img src="image\Character\Character_10.png" alt="">
-            <img src="image\Character\Character_11.png" alt="">
-            <img src="image\Character\Character_12.png" alt="">
-            <img src="image\Character\Character_13.png" alt="">
-            <img src="image\Character\Character_14.png" alt="">
-            <img src="image\Character\Character_15.png" alt="">
-            <img src="image\Character\Character_16.png" alt="">
-            <img src="image\Character\Character_17.png" alt="">
-            <img src="image\Character\Character_18.png" alt="">
-            <img src="image\Character\Character_19.png" alt="">
-            <img src="image\Character\Character_20.png" alt="">
-            <img src="image\Character\Character_21.png" alt="">
-            <img src="image\Character\Character_22.png" alt="">
-            <img src="image\Character\Character_23.png" alt="">
-            <img src="image\Character\Character_24.png" alt="">
-            <img src="image\Character\Character_25.png" alt="">
+            <input type="image" src="https://gamewith-tw.akamaized.net/img/fa2fe4bba3242c0908a8e10a88ceaae5.jpg" alt="" onclick="image(this)";>
+            <input type="image" src="image\Character\Character_2.png" alt=""/>
+            <input type="image" src="image\Character\Character_3.png" alt=""/>
+            <input type="image" src="image\Character\Character_4.png" alt=""/>
+            <input type="image" src="image\Character\Character_5.png" alt=""/>
+            <input type="image" src="image\Character\Character_6.png" alt=""/>
+            <input type="image" src="image\Character\Character_7.png" alt=""/>
+            <input type="image" src="image\Character\Character_8.png" alt=""/>
+            <input type="image" src="image\Character\Character_9.png" alt=""/>
+            <input type="image" src="image\Character\Character_10.png" alt=""/>
+            <input type="image" src="image\Character\Character_11.png" alt=""/>
+            <input type="image" src="image\Character\Character_12.png" alt=""/>
+            <input type="image" src="image\Character\Character_13.png" alt=""/>
+            <input type="image" src="image\Character\Character_14.png" alt=""/>
+            <input type="image" src="image\Character\Character_15.png" alt=""/>
+            <input type="image" src="image\Character\Character_16.png" alt=""/>
+            <input type="image" src="image\Character\Character_17.png" alt=""/>
+            <input type="image" src="image\Character\Character_18.png" alt=""/>
+            <input type="image" src="image\Character\Character_19.png" alt=""/>
+            <input type="image" src="image\Character\Character_20.png" alt=""/>
+            <input type="image" src="image\Character\Character_21.png" alt=""/>
+            <input type="image" src="image\Character\Character_22.png" alt=""/>
+            <input type="image" src="image\Character\Character_23.png" alt=""/>
+            <input type="image" src="image\Character\Character_24.png" alt=""/>
+            <input type="image" src="image\Character\Character_25.png" alt=""/>
         </div>
 
     </div>
     <!-- 詳細說明 -->
     <div id="role_detail">
-
+        <div id="123">
+            <p ><img src="image\Character\Character_2.png" alt=""></p>
+        </div>
     </div>
-    
+    <script type="text/javascript">
+        function image(img) {
+            var cc = img.src
+            document.getElementById('123').innerHTML ="<img src='cc' />";
+        } image(img);
+    </script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 
