--- a/character.html
+++ b/character.html
@@ -26,7 +26,14 @@
             background-color: coral;
             text-align: center;
         }
-        
+        #role_bar::-webkit-scrollbar{
+            width: 5px;
+            height: 8px;
+            background-color: #aaa;
+        }
+        #role_bar::-webkit-scrollbar-thumb {
+            background: rgb(51, 50, 50);
+        }
         #role_detail {
             height: 100vh;
             width: 400px;
