--- a/rule.html
+++ b/rule.html
@@ -12,7 +12,7 @@
             min-width: 80vw;
             display: flex;
             flex-direction: column;
-            background-color: rgb(144, 223, 236);
+            background-image: url("image/background.png");
         }
         
         table {
