--- a/card.html
+++ b/card.html
@@ -89,9 +89,6 @@
                 <li>情報顏色</li>
                 <p>分別有【紅】【藍】【黑】【雙色】</p>
             </ul>
-
-
-
         </div>
         <div class="Features">
             <h3>四. 功能牌</h3>
@@ -104,7 +101,6 @@
                     </div>
                 </div>
                 <div class="feature_card">
-
                     <img src="image\Card\Do_Not_Receive.png" alt="">
                     <div class="card_introduce">
                         <p>調虎離山</p>
@@ -112,7 +108,6 @@
                     </div>
                 </div>
                 <div class="feature_card">
-
                     <img src="image\Card\Get_Passing_Information.png" alt="">
                     <div class="card_introduce">
                         <p>截獲</p>
@@ -120,7 +115,6 @@
                     </div>
                 </div>
                 <div class="feature_card">
-
                     <img src="image\Card\Change_Information.png" alt="">
                     <div class="card_introduce">
                         <p>調包</p>
@@ -128,7 +122,6 @@
                     </div>
                 </div>
                 <div class="feature_card">
-
                     <img src="image\Card\Transfer_Information.png" alt="">
                     <div class="card_introduce">
                         <p>轉移</p>
@@ -136,7 +129,6 @@
                     </div>
                 </div>
                 <div class="feature_card">
-
                     <img src="image\Card\Decrypt.png" alt="">
                     <div class="card_introduce">
                         <p>破譯</p>
@@ -144,7 +136,6 @@
                     </div>
                 </div>
                 <div class="feature_card">
-
                     <img src="image\Card\Cancel_Card.png" alt="">
                     <div class="card_introduce">
                         <p>識破</p>
@@ -152,7 +143,6 @@
                     </div>
                 </div>
                 <div class="feature_card">
-
                     <img src="image/Card/Public_Information.png" alt="">
                     <div class="card_introduce">
                         <p>公開文檔</p>
@@ -160,7 +150,6 @@
                     </div>
                 </div>
                 <div class="feature_card">
-
                     <img src="image\Card\Fire_Black.png" alt="">
                     <div class="card_introduce">
                         <p>燒毀</p>
@@ -168,45 +157,44 @@
                     </div>
                 </div>
                 <div class="feature_card">
-
                     <img src="image\Card\Who_Are_You.png" alt="">
                     <div class="card_introduce">
                         <p>試探</p>
-                        <p></p>
+                        <p>功能：指定自己以外的一名玩家，只有該名玩家可以看牌，並依照陣營做出對應動作</p>
+                        <P>使用時機：自己的出牌階段</P>
                     </div>
                 </div>
                 <div class="feature_card">
-
                     <img src="image\Card\Draw_Card.png" alt="">
                     <div class="card_introduce">
                         <p>增援</p>
-                        <p></p>
+                        <p>功能：抽取 X 張牌，X 為自己黑情報數量 +1</p>
+                        <p>使用時機：自己的出牌階段</p>
                     </div>
                 </div>
                 <div class="feature_card">
-
                     <img src="image\Card\Change_All_Card.png" alt="">
                     <div class="card_introduce">
                         <p>權衡</p>
-                        <p></p>
+                        <p>功能：捨棄所有手牌，並抽取同等數量的牌到手上</p>
+                        <p>使用時機：自己的出牌階段</p>
                     </div>
                 </div>
                 <div class="feature_card">
-
                     <img src="image\Card\Get_Information.png" alt="">
                     <div class="card_introduce">
                         <p>博弈</p>
-                        <p></p>
+                        <p>功能：指定一名玩家，該名玩家從牌庫頂抽取一張牌，做為情報收下</p>
+                        <p>使用時機：自己的出牌階段</p>
                     </div>
                 </div>
                 <div class="feature_card">
-
                     <img src="image\Card\Everyone_Get_Information.png" alt="">
                     <div class="card_introduce">
                         <p>真偽莫辨</p>
-                        <p></p>
+                        <p>功能：牌，從牌庫頂抽取與剩餘玩家相同數量的由打出這張牌的人開始，以逆時針方向一人一張做為情報收下</p>
+                        <p>使用時機：自己的出牌階段</p>
                     </div>
-
                 </div>
             </div>
         </div>
