--- a/card.html
+++ b/card.html
@@ -100,15 +100,18 @@
                     <img src="image\Card\Lock.png" alt="">
                     <div class="card_introduce">
                         <p>鎖定</p>
-                        <p>123</p>
+                        <p>功能:指定另一位玩家，該玩家必須接收本回合傳遞到他面前的情報</p>
+                        <p>使用時機:只能在自己回合的出牌階段和情報傳遞時使用</p>
+                        <p>*在他人回合不能使用(柒佰除外)</p>
                     </div>
                 </div>
                 <div class="feature_card">
-
                     <img src="image\Card\Do_Not_Receive.png" alt="">
                     <div class="card_introduce">
                         <p>調虎離山</p>
-                        <p></p>
+                        <p>功能:指定另一位玩家，該玩家在本回合內不能接收船到自己面前的情報</p>
+                        <p>使用時機:情報傳遞時，情報傳出者和被鎖定者不受此卡影響</p>
+                        <p>*鎖定效果大於調虎離山，若該玩家已被鎖定，則無法使用調虎離山，當情報到你面前，還是能使用【破譯】【轉移】等功能牌</p>
                     </div>
                 </div>
                 <div class="feature_card">
