--- a/character.html
+++ b/character.html
@@ -152,7 +152,7 @@
 
 
 
-        let role_name = ["致命香水", "老金"]
+        let role_name = ["致命香水", "老金", "柒佰", "小白", "大美女", "職業殺手", "浮萍", "貝雷帽", "老槍", "譯電員", "怪盜九九", "老金", "六姐", "戴笠", "禮服蒙面人", "老鬼", "黃雀", "情報處長", "小馬哥", "鋼鐵特工K", "黑玫瑰", "福爾摩斯", "刀鋒", "閃靈", "蝮蛇"]
 
         $("#search_input").keydown(function(event) {
             if (event.keyCode == 13) {
