--- a/card.html
+++ b/card.html
@@ -115,7 +115,8 @@
                     <img src="image\Card\Get_Passing_Information.png" alt="">
                     <div class="card_introduce">
                         <p>截獲</p>
-                        <p></p>
+                        <p>功能:將一張傳遞中的情報直接傳遞到自己面前</p>
+                        <p>使用時機:他人回合情報傳遞時</p>
                     </div>
                 </div>
                 <div class="feature_card">
