--- a/character.html
+++ b/character.html
@@ -22,7 +22,7 @@
             display: block;
             width: 200px;
             overflow: auto;
-            height: 100vh;
+            height: 85vh;
             background-color: coral;
             text-align: center;
         }
@@ -45,11 +45,12 @@
             flex-direction: column;
             align-items: center;
             margin-left: 20px;
+            justify-content: center;
         }
         
         #search {
             width: 200px;
-            height: 120px;
+            height: 15vh;
             background-color: darkcyan;
             text-align: center;
             padding-top: 15px;
@@ -123,7 +124,7 @@
     <!-- 詳細說明 -->
     <div id="role_detail">
         <p><img src="image\Character\Character_1.png" alt="" id="pho" height="700px"></p>
-        <div>
+        <!-- <div>
             <table>
                 <tr>
                     <td>座右銘</td>
@@ -138,7 +139,7 @@
                     <td></td>
                 </tr>
             </table>
-        </div>
+        </div> -->
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
