--- a/card.html
+++ b/card.html
@@ -33,6 +33,7 @@
         
         .Features img {
             width: 140px;
+            height: 190px;
         }
         
         .feature_card {
@@ -97,68 +98,74 @@
                     <img src="image\Card\Lock.png" alt="">
                     <div class="card_introduce">
                         <p>鎖定</p>
-                        <p>功能:指定另一位玩家，該玩家必須接收本回合傳遞到他面前的情報</p>
-                        <p>使用時機:只能在自己回合的出牌階段和情報傳遞時使用</p>
-                        <p>*在他人回合不能使用(柒佰除外)</p>
+                        <p>功能：指定另一位玩家，該玩家必須接收本回合傳遞到他面前的情報</p>
+                        <p>使用時機：只能在自己回合的出牌階段和情報傳遞時使用</p>
+                        <p style="color: red;">*在他人回合不能使用(柒佰除外)</p>
                     </div>
                 </div>
                 <div class="feature_card">
                     <img src="image\Card\Do_Not_Receive.png" alt="">
                     <div class="card_introduce">
                         <p>調虎離山</p>
-                        <p>功能:指定另一位玩家，該玩家在本回合內不能接收船到自己面前的情報</p>
-                        <p>使用時機:情報傳遞時，情報傳出者和被鎖定者不受此卡影響</p>
-                        <p>*鎖定效果大於調虎離山，若該玩家已被鎖定，則無法使用調虎離山，當情報到你面前，還是能使用【破譯】【轉移】等功能牌</p>
+                        <p>功能：指定另一位玩家，該玩家在本回合內不能接收傳到自己面前的情報</p>
+                        <p>使用時機：情報傳遞時，情報傳出者和被鎖定者不受此卡影響</p>
+                        <p style="color: red;">*鎖定效果大於調虎離山，若該玩家已被鎖定，則無法使用調虎離山，當情報到你面前，還是能使用【破譯】【轉移】等功能牌</p>
                     </div>
                 </div>
                 <div class="feature_card">
                     <img src="image\Card\Get_Passing_Information.png" alt="">
                     <div class="card_introduce">
                         <p>截獲</p>
-                        <p>功能:將一張傳遞中的情報直接傳遞到自己面前</p>
-                        <p>使用時機:他人回合情報傳遞時</p>
+                        <p>功能：將一張傳遞中的情報直接傳遞到自己面前</p>
+                        <p>使用時機：他人回合情報傳遞時</p>
                     </div>
                 </div>
                 <div class="feature_card">
                     <img src="image\Card\Change_Information.png" alt="">
                     <div class="card_introduce">
                         <p>調包</p>
-                        <p></p>
+                        <p>功能：將傳遞中的情報替換成這張掉包，原情報移至棄牌堆</p>
+                        <P>使用時機：情報傳遞時</P>
                     </div>
                 </div>
                 <div class="feature_card">
                     <img src="image\Card\Transfer_Information.png" alt="">
                     <div class="card_introduce">
                         <p>轉移</p>
-                        <p></p>
+                        <p>功能：指定一名其他玩家，並將一張傳遞到自己面前的情報，傳遞到該名玩家面前，該玩家"必須"接收該情報</p>
+                        <P>使用時機:當情報傳遞到自己面前時</P>
                     </div>
                 </div>
                 <div class="feature_card">
                     <img src="image\Card\Decrypt.png" alt="">
                     <div class="card_introduce">
                         <p>破譯</p>
-                        <p></p>
+                        <p>功能：當情報傳遞到自己面前時，猜測該情報的顏色，接著自己檢視該情報，假設猜對了，可以將情報公開，並且抽取一張牌</p>
+                        <P>使用時機：當情報傳遞到自己面前時</P>
                     </div>
                 </div>
                 <div class="feature_card">
                     <img src="image\Card\Cancel_Card.png" alt="">
                     <div class="card_introduce">
                         <p>識破</p>
-                        <p></p>
+                        <p>功能：將玩家打出的功能牌無效化</p>
+                        <p>使用時機：任意玩家打出功能牌時即可使用</p>
                     </div>
                 </div>
                 <div class="feature_card">
                     <img src="image/Card/Public_Information.png" alt="">
                     <div class="card_introduce">
                         <p>公開文檔</p>
-                        <p></p>
+                        <p>功能：僅能作為文本情報傳遞，接收此情報的人依照陣營做出對應動作</p>
+                        <p>使用時機：自己的出牌階段</p>
                     </div>
                 </div>
                 <div class="feature_card">
                     <img src="image\Card\Fire_Black.png" alt="">
                     <div class="card_introduce">
                         <p>燒毀</p>
-                        <p></p>
+                        <p>功能：移除任意玩家面前的一張黑情報</p>
+                        <p>使用時機：任何階段皆可使用</p>
                     </div>
                 </div>
                 <div class="feature_card">
@@ -197,7 +204,7 @@
                     <img src="image\Card\Everyone_Get_Information.png" alt="">
                     <div class="card_introduce">
                         <p>真偽莫辨</p>
-                        <p>功能：牌，從牌庫頂抽取與剩餘玩家相同數量的由打出這張牌的人開始，以逆時針方向一人一張做為情報收下</p>
+                        <p>功能：從牌庫頂抽取與剩餘玩家相同數量的牌，由打出這張牌的人開始，以逆時針方向一人一張做為情報收下</p>
                         <p>使用時機：自己的出牌階段</p>
                     </div>
                 </div>
