--- a/card.html
+++ b/card.html
@@ -26,7 +26,7 @@
         .information ul {
             font-size: 1.25rem;
         }
-        
+        .information 
         .group img {
             width: 120px;
         }
@@ -86,9 +86,18 @@
             <h3>三. 情報</h3>
             <ul>
                 <li>傳遞方式</li>
-                <p>有三種傳遞方式，分別為【密電】【直達】【文本】</p>
+                <p>有三種傳遞方式，分別為【密電】【直達】【文本】，當情報使用時，只須看右上角的傳遞方式即可</p>
+                <img style="width: 40vw;" src="image\Card\intelligence_transfer.JPG" alt="">
+                <p><span style="font-weight: bold;"> 密電</span>: 將牌面朝下，並以逆時針方向傳遞</p>
+                <p><span style="font-weight: bold;"> 直達</span>: 將牌面朝下，將該情報傳給你指定的玩家</p>
+                <p><span style="font-weight: bold;"> 文本</span>: 將牌面 <span style="color: red;">朝上</span>，並以逆時針方向傳遞</p>
                 <li>情報顏色</li>
                 <p>分別有【紅】【藍】【黑】【雙色】</p>
+                <img style="width: 8vw" src="image\Card\Everyone_Get_Information.png" alt="">
+                <img style="width: 8vw" src="image\Card\Draw_Card.png" alt="">
+                <img style="width: 8vw" src="image\Card\Change_All_Card.png" alt="">
+                <img style="width: 8vw" src="image\Card\Change_Information.png" alt="">
+                <img style="width: 8vw" src="" alt="">
             </ul>
         </div>
         <div class="Features">
