--- a/character.html
+++ b/character.html
@@ -93,31 +93,31 @@
         </div>
         <div id="role_bar">
             <p style="margin: 5px;"><span style="color: red; background-color: white; font-size: 2rem;">角色列表</span></p>
-            <input type="image" src="image\Character\Character_1.png" alt="" onclick="image(1)" ;>
-            <input type="image" src="image\Character\Character_2.png" alt="" onclick="image(2)" ;/>
-            <input type="image" src="image\Character\Character_3.png" alt="" onclick="image(3)" ; />
-            <input type="image" src="image\Character\Character_4.png" alt="" onclick="image(4)" ;/>
-            <input type="image" src="image\Character\Character_5.png" alt="" onclick="image(5)" ;/>
-            <input type="image" src="image\Character\Character_6.png" alt="" onclick="image(6)" ;/>
-            <input type="image" src="image\Character\Character_7.png" alt="" onclick="image(7)" ;/>
-            <input type="image" src="image\Character\Character_8.png" alt="" onclick="image(8)" ;/>
-            <input type="image" src="image\Character\Character_9.png" alt="" onclick="image(9)" ;/>
-            <input type="image" src="image\Character\Character_10.png" alt="" onclick="image(10)" ; />
-            <input type="image" src="image\Character\Character_11.png" alt="" onclick="image(14)" ;/>
-            <input type="image" src="image\Character\Character_12.png" alt="" onclick="image(15)" ; />
-            <input type="image" src="image\Character\Character_13.png" alt="" onclick="image(16)" ;/>
-            <input type="image" src="image\Character\Character_14.png" alt="" onclick="image(14)" ;/>
-            <input type="image" src="image\Character\Character_15.png" alt="" onclick="image(15)" ;/>
-            <input type="image" src="image\Character\Character_16.png" alt="" onclick="image(16)" ; />
-            <input type="image" src="image\Character\Character_17.png" alt="" onclick="image(17)" ;/>
-            <input type="image" src="image\Character\Character_18.png" alt="" onclick="image(19)" ;/>
-            <input type="image" src="image\Character\Character_19.png" alt="" onclick="image(19)" ;/>
-            <input type="image" src="image\Character\Character_20.png" alt="" onclick="image(20)" ;/>
-            <input type="image" src="image\Character\Character_21.png" alt="" onclick="image(21)" ;/>
-            <input type="image" src="image\Character\Character_22.png" alt="" onclick="image(22)" ; />
-            <input type="image" src="image\Character\Character_23.png" alt="" onclick="image(23)" ;/>
-            <input type="image" src="image\Character\Character_24.png" alt="" onclick="image(24)" ; />
-            <input type="image" src="image\Character\Character_25.png" alt="" onclick="image(25)" ;/>
+            <input type="image" src="image\Character\Character_1.png" alt="致命香水" onclick="image(1)" ;>
+            <input type="image" src="image\Character\Character_2.png" alt="峨嵋峰" onclick="image(2)" ;/>
+            <input type="image" src="image\Character\Character_3.png" alt="柒佰" onclick="image(3)" ; />
+            <input type="image" src="image\Character\Character_4.png" alt="小白" onclick="image(4)" ;/>
+            <input type="image" src="image\Character\Character_5.png" alt="大美女" onclick="image(5)" ;/>
+            <input type="image" src="image\Character\Character_6.png" alt="職業殺手" onclick="image(6)" ;/>
+            <input type="image" src="image\Character\Character_7.png" alt="浮萍" onclick="image(7)" ;/>
+            <input type="image" src="image\Character\Character_8.png" alt="貝雷帽" onclick="image(8)" ;/>
+            <input type="image" src="image\Character\Character_9.png" alt="老槍" onclick="image(9)" ;/>
+            <input type="image" src="image\Character\Character_10.png" alt="譯電員" onclick="image(10)" ; />
+            <input type="image" src="image\Character\Character_11.png" alt="怪盜九九" onclick="image(14)" ;/>
+            <input type="image" src="image\Character\Character_12.png" alt="老金" onclick="image(15)" ; />
+            <input type="image" src="image\Character\Character_13.png" alt="六姐" onclick="image(16)" ;/>
+            <input type="image" src="image\Character\Character_14.png" alt="戴笠" onclick="image(14)" ;/>
+            <input type="image" src="image\Character\Character_15.png" alt="禮服蒙面人" onclick="image(15)" ;/>
+            <input type="image" src="image\Character\Character_16.png" alt="老鬼" onclick="image(16)" ; />
+            <input type="image" src="image\Character\Character_17.png" alt="黃雀" onclick="image(17)" ;/>
+            <input type="image" src="image\Character\Character_18.png" alt="情報處長" onclick="image(19)" ;/>
+            <input type="image" src="image\Character\Character_19.png" alt="小馬哥" onclick="image(19)" ;/>
+            <input type="image" src="image\Character\Character_20.png" alt="鋼鐵特工K" onclick="image(20)" ;/>
+            <input type="image" src="image\Character\Character_21.png" alt="黑玫瑰" onclick="image(21)" ;/>
+            <input type="image" src="image\Character\Character_22.png" alt="福爾摩斯" onclick="image(22)" ; />
+            <input type="image" src="image\Character\Character_23.png" alt="刀鋒" onclick="image(23)" ;/>
+            <input type="image" src="image\Character\Character_24.png" alt="閃靈" onclick="image(24)" ; />
+            <input type="image" src="image\Character\Character_25.png" alt="蝮蛇" onclick="image(25)" ;/>
         </div>
 
     </div>
