--- a/character.html
+++ b/character.html
@@ -79,6 +79,16 @@
         td {
             border: 1px black solid;
         }
+
+        #btn1{
+            color: blue;
+            width: 100px;
+            height: 100px;
+            border-radius: 50px;
+            position: fixed;
+            right: 0;
+            bottom: 0;
+        }
     </style>
 
 </head>
@@ -141,6 +151,8 @@
             </table>
         </div> -->
     </div>
+
+    <input type ="button" onclick="history.back()" value="上一頁" id="btn1"></input>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script> -->
