--- a/rule.html
+++ b/rule.html
@@ -44,6 +44,16 @@
             left: 25%;
             right: 25%;
         }
+        
+        #btn1 {
+            color: blue;
+            width: 100px;
+            height: 100px;
+            border-radius: 50px;
+            position: fixed;
+            right: 0;
+            bottom: 0;
+        }
     </style>
 </head>
 
@@ -190,6 +200,9 @@
             </ol>
         </div>
     </div>
+
+    <input type ="button" onclick="history.back()" value="上一頁" id="btn1"></input>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 </body>
