--- a/wind/index.html
+++ b/wind/index.html
@@ -10,7 +10,7 @@
     <style type="text/css">
         body {
             /* background-color: rgb(58, 197, 104); */
-            background-image: url(../image/background.png);
+            background-image: url(static/background.png);
             background-position: center;
             margin: 0;
             height: 100vh;
@@ -193,23 +193,23 @@
         </aside>
         <div id="content">
             <div id="photo_block">
-                <img src="../image/The_Message1.jpg">
-                <img src="../image/The_Message2.jpg">
+                <img src="static/The_Message1.jpg">
+                <img src="static/The_Message2.jpg">
             </div>
             <div id="another_table_game">
                 <p>其他同類型桌遊</p>
                 <div>
                     <div class="table_game">
                         <p>三國殺</p>
-                        <a href="#"><img src="../image/WTK.jpg"></a>
+                        <a href="#"><img src="static/WTK.jpg"></a>
                     </div>
                     <div class="table_game">
                         <p>盜夢都市</p>
-                        <a href="#"><img src="../image/Inception.jpg"></a>
+                        <a href="#"><img src="static/Inception.jpg"></a>
                     </div>
                     <div class="table_game">
                         <p>BANG！砰</p>
-                        <a href="#"><img src="../image/BANG.jpg"></a>
+                        <a href="#"><img src="static/BANG.jpg"></a>
                     </div>
                 </div>
             </div>
