--- a/wind/index.html
+++ b/wind/index.html
@@ -173,7 +173,10 @@
 <body>
     <header>
         <h1>風聲</h1>
-        <input type="button" onclick="history.back()" value="揪" id="btn1"></input>
+        <form action="/register",method = "GET">
+            <input type="submit" value="揪" id="btn1">
+        </form>
+        
     </header>
     <div id="main">
         <aside>
