--- a/wind/card.html
+++ b/wind/card.html
@@ -12,7 +12,7 @@
             min-width: 80vw;
             display: flex;
             flex-direction: column;
-            background-image: url("image/background.png");
+            background-image: url("static/background.png");
         }
         
         .cen {
@@ -81,31 +81,31 @@
         <div class='group'>
             <h3>一. 陣營</h3>
             <div style="margin-left:40px;">
-                <img src="image\Group\Red.png" alt="">
-                <img src="image\Group\Blue.png" alt="">
-                <img src="image\Group\Green.png" alt="">
+                <img src="static/Group/Red.png" alt="">
+                <img src="static/Group/Blue.png" alt="">
+                <img src="static/Group/Green.png" alt="">
                 <p>分為潛伏、軍情和醬油三陣營，每個陣營各三張。</p>
             </div>
         </div>
         <div class='role'>
             <h3>二. 角色卡</h3>
-            <img style="width: 48vw;" src="image\Character_Introduce.png" alt="">
+            <img style="width: 48vw;" src="static/Character_Introduce.png" alt="">
         </div>
         <div class="information">
             <h3>三. 情報</h3>
             <ul>
                 <li>傳遞方式</li>
                 <p>有三種傳遞方式，分別為【密電】【直達】【文本】，當情報使用時，只須看右上角的傳遞方式即可</p>
-                <img style="width: 40vw;" src="image\Card\intelligence_transfer.JPG" alt="">
+                <img style="width: 40vw;" src="static/Card/intelligence_transfer.JPG" alt="">
                 <p><span style="font-weight: bold;"> 密電</span>: 將牌面朝下，並以逆時針方向傳遞</p>
                 <p><span style="font-weight: bold;"> 直達</span>: 將牌面朝下，將該情報傳給你指定的玩家</p>
                 <p><span style="font-weight: bold;"> 文本</span>: 將牌面 <span style="color: red;">朝上</span>，並以逆時針方向傳遞</p>
                 <li>情報顏色</li>
                 <p>分別有【紅】【藍】【黑】【雙色】</p>
-                <img style="width: 8vw" src="image\Card\Everyone_Get_Information.png" alt="">
-                <img style="width: 8vw" src="image\Card\Draw_Card.png" alt="">
-                <img style="width: 8vw" src="image\Card\Change_All_Card.png" alt="">
-                <img style="width: 8vw" src="image\Card\Change_Information.png" alt="">
+                <img style="width: 8vw" src="static/Card/Everyone_Get_Information.png" alt="">
+                <img style="width: 8vw" src="static/Card/Draw_Card.png" alt="">
+                <img style="width: 8vw" src="static/Card/Change_All_Card.png" alt="">
+                <img style="width: 8vw" src="static/Card/Change_Information.png" alt="">
                 <img style="width: 8vw" src="" alt="">
             </ul>
         </div>
@@ -113,7 +113,7 @@
             <h3>四. 功能牌</h3>
             <div style="margin-left:40px;">
                 <div class="feature_card">
-                    <img src="image\Card\Lock.png" alt="">
+                    <img src="static/Card/Lock.png" alt="">
                     <div class="card_introduce">
                         <p>鎖定</p>
                         <p>功能：指定另一位玩家，該玩家必須接收本回合傳遞到他面前的情報</p>
@@ -122,7 +122,7 @@
                     </div>
                 </div>
                 <div class="feature_card">
-                    <img src="image\Card\Do_Not_Receive.png" alt="">
+                    <img src="static/Card/Do_Not_Receive.png" alt="">
                     <div class="card_introduce">
                         <p>調虎離山</p>
                         <p>功能：指定另一位玩家，該玩家在本回合內不能接收傳到自己面前的情報</p>
@@ -131,7 +131,7 @@
                     </div>
                 </div>
                 <div class="feature_card">
-                    <img src="image\Card\Get_Passing_Information.png" alt="">
+                    <img src="static/Card/Get_Passing_Information.png" alt="">
                     <div class="card_introduce">
                         <p>截獲</p>
                         <p>功能：將一張傳遞中的情報直接傳遞到自己面前</p>
@@ -139,7 +139,7 @@
                     </div>
                 </div>
                 <div class="feature_card">
-                    <img src="image\Card\Change_Information.png" alt="">
+                    <img src="static/Card/Change_Information.png" alt="">
                     <div class="card_introduce">
                         <p>調包</p>
                         <p>功能：將傳遞中的情報替換成這張掉包，原情報移至棄牌堆</p>
@@ -147,7 +147,7 @@
                     </div>
                 </div>
                 <div class="feature_card">
-                    <img src="image\Card\Transfer_Information.png" alt="">
+                    <img src="static/Card/Transfer_Information.png" alt="">
                     <div class="card_introduce">
                         <p>轉移</p>
                         <p>功能：指定一名其他玩家，並將一張傳遞到自己面前的情報，傳遞到該名玩家面前，該玩家"必須"接收該情報</p>
@@ -155,7 +155,7 @@
                     </div>
                 </div>
                 <div class="feature_card">
-                    <img src="image\Card\Decrypt.png" alt="">
+                    <img src="static/Card/Decrypt.png" alt="">
                     <div class="card_introduce">
                         <p>破譯</p>
                         <p>功能：當情報傳遞到自己面前時，猜測該情報的顏色，接著自己檢視該情報，假設猜對了，可以將情報公開，並且抽取一張牌</p>
@@ -163,7 +163,7 @@
                     </div>
                 </div>
                 <div class="feature_card">
-                    <img src="image\Card\Cancel_Card.png" alt="">
+                    <img src="static/Card/Cancel_Card.png" alt="">
                     <div class="card_introduce">
                         <p>識破</p>
                         <p>功能：將玩家打出的功能牌無效化</p>
@@ -171,7 +171,7 @@
                     </div>
                 </div>
                 <div class="feature_card">
-                    <img src="image/Card/Public_Information.png" alt="">
+                    <img src="static/Card/Public_Information.png" alt="">
                     <div class="card_introduce">
                         <p>公開文檔</p>
                         <p>功能：僅能作為文本情報傳遞，接收此情報的人依照陣營做出對應動作</p>
@@ -179,7 +179,7 @@
                     </div>
                 </div>
                 <div class="feature_card">
-                    <img src="image\Card\Fire_Black.png" alt="">
+                    <img src="static/Card/Fire_Black.png" alt="">
                     <div class="card_introduce">
                         <p>燒毀</p>
                         <p>功能：移除任意玩家面前的一張黑情報</p>
@@ -187,7 +187,7 @@
                     </div>
                 </div>
                 <div class="feature_card">
-                    <img src="image\Card\Who_Are_You.png" alt="">
+                    <img src="static/Card/Who_Are_You.png" alt="">
                     <div class="card_introduce">
                         <p>試探</p>
                         <p>功能：指定自己以外的一名玩家，只有該名玩家可以看牌，並依照陣營做出對應動作</p>
@@ -195,7 +195,7 @@
                     </div>
                 </div>
                 <div class="feature_card">
-                    <img src="image\Card\Draw_Card.png" alt="">
+                    <img src="static/Card/Draw_Card.png" alt="">
                     <div class="card_introduce">
                         <p>增援</p>
                         <p>功能：抽取 X 張牌，X 為自己黑情報數量 +1</p>
@@ -203,7 +203,7 @@
                     </div>
                 </div>
                 <div class="feature_card">
-                    <img src="image\Card\Change_All_Card.png" alt="">
+                    <img src="static/Card/Change_All_Card.png" alt="">
                     <div class="card_introduce">
                         <p>權衡</p>
                         <p>功能：捨棄所有手牌，並抽取同等數量的牌到手上</p>
@@ -211,7 +211,7 @@
                     </div>
                 </div>
                 <div class="feature_card">
-                    <img src="image\Card\Get_Information.png" alt="">
+                    <img src="static/Card/Get_Information.png" alt="">
                     <div class="card_introduce">
                         <p>博弈</p>
                         <p>功能：指定一名玩家，該名玩家從牌庫頂抽取一張牌，做為情報收下</p>
@@ -219,7 +219,7 @@
                     </div>
                 </div>
                 <div class="feature_card">
-                    <img src="image\Card\Everyone_Get_Information.png" alt="">
+                    <img src="static/Card/Everyone_Get_Information.png" alt="">
                     <div class="card_introduce">
                         <p>真偽莫辨</p>
                         <p>功能：從牌庫頂抽取與剩餘玩家相同數量的牌，由打出這張牌的人開始，以逆時針方向一人一張做為情報收下</p>
