--- a/wind/rule.html
+++ b/wind/rule.html
@@ -12,7 +12,7 @@
             min-width: 80vw;
             display: flex;
             flex-direction: column;
-            background-image: url("image/background.png");
+            background-image: url("static/background.png");
         }
         
         table {
