--- a/wind/story.html
+++ b/wind/story.html
@@ -8,7 +8,7 @@
     <title>故事背景</title>
     <style type="text/css">
         body {
-            background-image: url("image/background.png");
+            background-image: url("static/background.png");
             text-align: center;
         }
         
@@ -40,7 +40,7 @@
 </head>
 
 <body>
-    <img src="image/background2.jpg">
+    <img src="static/background2.jpg">
     <div>
         <p>毛澤東蔣介石和汪精衛時代，各地民不聊生，人人自危</p>
 
